Modify the file app.js and app.css

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,9 @@
           <form class="add-messg">
             <div>
               <input class="box-shadow" type="text" name="message" id="message" placeholder="Enter your message ...">
-              <i class="fas fa-paper-plane send"></i>
+              <button class="submit">
+                <i class="fas fa-paper-plane send"></i>
+              </button>
             </div>
           </form>
         </div>
